# Renju

./: CMakeLists.txt  GamePlay.h  Gameplay.c  README.md  main.c  main.cu  utils.c  utils.h
assets/: meta
assets/themes/: default  theme_2
src/: DataStructure.c  DataStructure.h  ForbidCheck.c  ForbidCheck.h  GameAI.c  GameAI.h  GameCheck.c  GameCheck.h  GameCheckAndCount.c  GameCheckAndCount.h  GameCore.c  GameCore.h  GameInit.c  GameInit.h  GamePlay.c  GamePlay.h  GameSys.c  GameSys.h  TUI.c  TUI.h  main.c  utils.c  utils.h
