cmake_minimum_required(VERSION 3.23)
project(Renju CUDA C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CUDA_STANDARD 14)

file(GLOB RENJU_SRC src/*)

message(STATUS "Thanks for compiling and building Renju project!")
message(STATUS "Welcome to https://creeperlordvader-iclucia-ashina.github.io and https://github.com/CreeperLordVader-Iclucia-Ashina for more surprise!")
#add_definitions(-D STATE_VERSION_TEST)
if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    add_executable(Renju ${RENJU_SRC})
    target_compile_definitions(Renju PUBLIC "IS_LINUX")
    message(STATUS "Constructing Renju on Linux.")
elseif(CMAKE_SYSTEM_NAME MATCHES "DARWIN")
    add_executable(Renju ${RENJU_SRC} src/GameCore.c src/ForbidCheck.h src/ForbidCheck.c)
    target_compile_definitions(Renju PUBLIC "IS_DARWIN")
    message(STATUS "Constructing Renju on macOS.")
elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
    add_executable(Renju.exe ${RENJU_SRC})
    target_compile_definitions(Renju PUBLIC "IS_WINDOWS")
    message(STATUS "Constructing Renju on Windows.")

endif()
